--- a/bio.html
+++ b/bio.html
@@ -7,8 +7,8 @@
     <h1>My Website HI BITCH </h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1EUcGBMVRbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <ul>
-      <l1><a href="index.html">home</a></l1>
-      <l2>bio</l2>
+      <li><a href="index.html">home</a></li>
+      <li>bio</li>
     </ul>
   </body>
 </html>
