--- a/bio.html
+++ b/bio.html
@@ -9,7 +9,10 @@
       <li><a href="index.html">home</a></li>
       <li>bio</li>
     </ul>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/1EUcGBMVRbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>
+      Short desc of myself :D
+    </p>
+
   </body>
   <footer>
     <h1>Socials</h1>
