--- a/bio.html
+++ b/bio.html
@@ -17,9 +17,9 @@
   <footer>
     <h1>Socials</h1>
     <ul>
-      <li><a href="https://twitter.com/Soranin422">twitter</a></li>
-      <li><a href="https://www.youtube.com/channel/UC-B_7UZDu-j9GI5Ed9rJrdw">youtube</a></li>
-      <li><a href="https://www.instagram.com/soranin422/">instagram</a></li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Soranin422">twitter</a></li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC-B_7UZDu-j9GI5Ed9rJrdw">youtube</a></li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/soranin422/">instagram</a></li>
     <ul>
   <footer>
 </html>
