--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@
     <title>Antonio Animation</title>
   </head>
   <body>
-    <h1>My Website HI BITCH </h1>
+    <h1>Soranin</h1>
     <ul>
       <li><a href="index.html">home</a></li>
       <li>bio</li>
