--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <img src="https://twitter.com/Soranin422/photo">
     <title>Antonio Animation</title>
   </head>
   <body>
