--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <img src="https://twitter.com/Soranin422/photo">
+    <img src="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg">
     <title>Antonio Animation</title>
   </head>
   <body>
