--- a/bio.html
+++ b/bio.html
@@ -18,9 +18,9 @@
   <footer>
     <h1>Socials</h1>
     <ul>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Soranin422">twitter</a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC-B_7UZDu-j9GI5Ed9rJrdw">youtube</a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/soranin422/">instagram</a></li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Soranin422"><img src="https://i.ya-webdesign.com/images/black-twitter-logo-png-4.png"></a></li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC-B_7UZDu-j9GI5Ed9rJrdw"><img src="https://cdn.clipart.email/e6eed6ce6c8196b321c4b27e36d9fc82_youtube-logo-computer-icons-youtube-png-download-512512-_512-512.png"></a></li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/soranin422/"><img src="https://i.ya-webdesign.com/images/instagram-logo-black-and-white-png.png"></a></li>
     <ul>
   <footer>
 </html>
