--- a/bio.html
+++ b/bio.html
@@ -11,7 +11,7 @@
       <li>bio</li>
     </ul>
     <p>
-      Short desc of myself :D
+      I was once an engineering major then I found animation and I liked it. Dropped out of college and well, here we are
     </p>
 
   </body>
