--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Antonio Animation</title>
-    <meta property="image" content="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg">
+    <link rel="icon" href="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg">
   </head>
   <body>
     <img src="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg">
