--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,7 @@
   <head>
     <title>Antonio Animation</title>
     <link rel="icon" href="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg">
+    <link href="main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <img src="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg">
