--- a/bio.html
+++ b/bio.html
@@ -5,24 +5,36 @@
     <link rel="icon" href="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg"/>
     <link href="main.css" rel="stylesheet" type="text/css"/>
   </head>
+
+
   <body>
-    <img src="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg">
-    <h1>Soranin</h1>
-    <ul>
-      <li><a href="index.html">home</a></li>
-      <li>bio</li>
-    </ul>
-    <p>
-      I was once an engineering major then I found animation and I liked it. Dropped out of college and well, here we are
-    </p>
+
+    <header>
+      <nav>
+        <h1><img class="logo" src="https://pbs.twimg.com/profile_images/1261620376016023552/ApDdsNaX_400x400.jpg"/>Soranin</h1>
+        <ul>
+          <li class="current">Bio</li>
+          <li><a href="index.html">Home</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div>
+      <p class="reel">A little about myself :D</p>
+      <p class="bio">I was once a 3rd year engineering major. Somewhere along the way I found animation, dropped out of school and well, here we are!</p>
+    </div>
 
   </body>
+
+
   <footer>
     <h1>Socials</h1>
     <ul>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Soranin422"><img src="https://i.ya-webdesign.com/images/black-twitter-logo-png-4.png"></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC-B_7UZDu-j9GI5Ed9rJrdw"><img src="https://cdn.clipart.email/e6eed6ce6c8196b321c4b27e36d9fc82_youtube-logo-computer-icons-youtube-png-download-512512-_512-512.png"></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/soranin422/"><img src="https://i.ya-webdesign.com/images/instagram-logo-black-and-white-png.png"></a></li>
+      <li class="twitter"><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Soranin422">twitter</a></li>
+      <li class="youtube"><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC-B_7UZDu-j9GI5Ed9rJrdw">youtube</a></li>
+      <li class="instagram"><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/soranin422/">instagram</a></li>
     <ul>
   <footer>
+
+
 </html>
